[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Stages/Scripts/Client_Final.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/buttons/button1.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttons/button_hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/buttons/button_clicked.png" type="Texture" id=5]
[ext_resource path="res://Assets/buttons/Coin.png" type="Texture" id=6]
[ext_resource path="res://Assets/background_2.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 32 )

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0.466667, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0, 0.478431, 0.027451, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_size = 2
outline_color = Color( 0, 0.45098, 0.0509804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 2
outline_color = Color( 0.00392157, 0.443137, 0, 1 )
font_data = ExtResource( 2 )

[node name="Client_Final" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background2" type="Sprite" parent="CanvasLayer/Panel"]
position = Vector2( 512.5, 296.2 )
scale = Vector2( 1.025, 1.025 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="CanvasLayer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -47.0
margin_right = 92.0
margin_bottom = -15.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "NEXT PHASE"

[node name="valor_a_receber" type="Label" parent="CanvasLayer/Panel"]
margin_left = 81.0
margin_top = 145.0
margin_right = 451.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 1 )
text = "Valor a receber:"

[node name="valor_receber" type="Label" parent="CanvasLayer/Panel/valor_a_receber"]
margin_left = 678.0
margin_right = 734.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "10"

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/valor_a_receber"]
position = Vector2( 757, 24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="erros_cometidos" type="Label" parent="CanvasLayer/Panel"]
margin_left = 83.0
margin_top = 223.0
margin_right = 476.0
margin_bottom = 274.0
custom_fonts/font = SubResource( 3 )
text = "Erros cometidos:"

[node name="valor_erros" type="Label" parent="CanvasLayer/Panel/erros_cometidos"]
margin_left = 676.0
margin_right = 732.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 4 )
text = "10"

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/erros_cometidos"]
position = Vector2( 755, 24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="dinheiro_perdido" type="Label" parent="CanvasLayer/Panel"]
margin_left = 81.0
margin_top = 309.0
margin_right = 470.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 5 )
text = "Dinheiro perdido:"

[node name="valor_perdido" type="Label" parent="CanvasLayer/Panel/dinheiro_perdido"]
margin_left = 678.0
margin_right = 759.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 6 )
text = "-10"

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/dinheiro_perdido"]
position = Vector2( 783, 24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="dinheiro_ganho" type="Label" parent="CanvasLayer/Panel"]
margin_left = 90.0
margin_top = 436.0
margin_right = 438.0
margin_bottom = 487.0
custom_fonts/font = SubResource( 7 )
text = "Dinheiro ganho:"

[node name="valor_dinheiro" type="Label" parent="CanvasLayer/Panel/dinheiro_ganho"]
margin_left = 669.0
margin_right = 725.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/dinheiro_ganho"]
position = Vector2( 748, 24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[connection signal="pressed" from="CanvasLayer/Panel/Button" to="." method="_on_Button_pressed"]
